[package]
name = "f1-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
actix-web = "4"
serde_json = "1.0"
reqwest = "0.11"
openssl = { version = "0.10", features = ["vendored"] }
anyhow = "1.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.6", features = [
  "runtime-actix-native-tls",
  "mysql",
  "chrono",
] }
itertools = "0.10"
